// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render the homepage 1`] = `
<DefaultThemeProvider>
  <GlobalStyleComponent />
  <AppStateProvider
    initialState={
      Object {
        "ui": Object {
          "nrOfBackdropTriggers": 0,
        },
      }
    }
    reducer={[Function]}
  >
    <div
      className="c-dashboard c-dashboard--page-type-not-found c-dashboard--max-width"
    >
      <Connect(Header)
        embedPreviewMode={false}
        hasEmbedButton={false}
        hasMaxWidth={true}
        hasPrintButton={false}
        homePage={false}
        printMode={false}
        printOrEmbedMode={false}
        user={Object {}}
      />
      <AppBody
        bodyClasses=""
        currentPage="NOT_FOUND"
        embedPreviewMode={false}
        hasMaxWidth={true}
        homePage={false}
        visibilityError={false}
      />
    </div>
  </AppStateProvider>
</DefaultThemeProvider>
`;

exports[`App should render the mapview 1`] = `
<DefaultThemeProvider>
  <GlobalStyleComponent />
  <AppStateProvider
    initialState={
      Object {
        "ui": Object {
          "nrOfBackdropTriggers": 0,
        },
      }
    }
    reducer={[Function]}
  >
    <div
      className="c-dashboard c-dashboard--page-type-not-found c-dashboard--max-width"
    >
      <Connect(Header)
        embedPreviewMode={false}
        hasEmbedButton={true}
        hasMaxWidth={true}
        hasPrintButton={true}
        homePage={false}
        printMode={false}
        printOrEmbedMode={false}
        user={Object {}}
      />
      <AppBody
        bodyClasses=""
        currentPage="NOT_FOUND"
        embedPreviewMode={false}
        hasMaxWidth={true}
        homePage={false}
        visibilityError={false}
      />
    </div>
  </AppStateProvider>
</DefaultThemeProvider>
`;
